<resources>
    <string name="app_name">PushIt</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="name">NAME (OPTIONAL)</string>
    <string name="password">PASSWORD</string>
    <string name="repeatPassword">REPEAT PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="register">REGISTER</string>
    <string name="back">BACK</string>
    <string name="passwordError">Passwords don\'t match</string>
    <string name="registerOk">Successful registration</string>
    <string name="registerError">Invalid formatted values entered or email already exists</string>
    <string name="connectionError">Failed to connect to server</string>
    <string name="loginError">Wrong email or password</string>
</resources>