<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/greenLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:materialIcon="account"
                app:materialIconColor="@color/green"
                app:materialIconSize="24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:scaleType="center" />
            <EditText
                android:id="@+id/emailEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:materialIcon="rename_box"
                app:materialIconColor="@color/green"
                app:materialIconSize="24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:scaleType="center" />
            <EditText
                android:id="@+id/nameEditText"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:materialIcon="lock"
                app:materialIconColor="@color/green"
                app:materialIconSize="24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:scaleType="center" />
            <EditText
                android:id="@+id/passwordEditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:materialIcon="lock"
                app:materialIconColor="@color/green"
                app:materialIconSize="24dp"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:scaleType="center" />
            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:hint="@string/repeatPassword"
                android:inputType="textPassword"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-condensed"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:textSize="22sp"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/backButton"
            android:text="@string/back"
            android:textSize="22sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>

    <include
        android:id="@+id/progressBar"
        android:visibility="gone"
        layout="@layout/include_progressbar" />

</RelativeLayout>